Show logged-in username in web interface

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 SMINFO_TIMEOUT_MS=60000
 SMINFO_STATE_PATH=.data/storage_state.json
+SMINFO_META_PATH=.data/session_meta.json
 SMINFO_BROWSER_CHANNEL=chrome
 FLASK_DEBUG=0
 PORT=5050
